# projektair2026

./: CMakeLists.txt  Entities.hpp  Game.hpp  Map.hpp  Opis projektu  Utils.hpp  Visuals.hpp  cmake  folderpocztkowy  kod do testu  kod poprawny Marcin   main.cpp  modmarcib  polska  poprwanykod  readme.md
